Fix: Flash card overflow problem

--- a/src/background/templates/css/flashcard.scss
+++ b/src/background/templates/css/flashcard.scss
@@ -6,7 +6,7 @@
 
 @keyframes animate-fade {
   from {
-    transform: scale(.8);
+    transform: scale(0.8);
     opacity: 0;
   }
   to {
@@ -96,6 +96,8 @@ $white: #fff;
         padding: 0 44px;
         animation: animate-fade 0.5s;
         width: 100%;
+        height: 100%;
+        overflow: auto;
       }
     }
 
